# runlog-skills

./: .gitignore  .lycheeignore  .markdownlint-cli2.jsonc  .mcp.json  CONTRIBUTING.md  README.md  RELEASING.md
.claude-plugin/: marketplace.json  plugin.json
aider/: README.md  SKILL.md  runlog-author.md  runlog-harvest.md
claude-code/: SKILL.md  runlog-author.md  runlog-harvest.md
cline/: README.md  SKILL.md  runlog-author.md  runlog-harvest.md
commands/: harvest.md  publish.md
common/: README.md  four-point-client-contract.md  runlog-author-contract.md  runlog-harvest-contract.md
continue/: README.md  SKILL.md  runlog-author.md  runlog-harvest.md
copilot/: README.md  SKILL.md  runlog-author.md  runlog-harvest.md
cursor/: README.md  SKILL.md  runlog-author.md  runlog-harvest.md
installer/: README.md  index.js  package.json
jetbrains/: README.md  SKILL.md  runlog-author.md  runlog-harvest.md
python-installer/: README.md  pyproject.toml
python-installer/src/runlog_install/: __init__.py  __main__.py  cli.py  host.py  jsonc.py  registry.py  skill_writer.py  yamlc.py
python-installer/src/runlog_install/hosts/: __init__.py  _base.py  aider.py  claude_code.py  continue_host.py  copilot.py  cursor.py  windsurf.py  zed.py
python-installer/tests/: conftest.py  test_aider.py  test_base.py  test_claude_code.py  test_cli.py  test_continue.py  test_copilot.py  test_cursor.py  test_jsonc.py  test_register.py  test_windsurf.py  test_yamlc.py  test_zed.py
runlog-author/: DESIGN.md  DRAFT.md  SKILL.md
runlog-harvest/: DESIGN.md
scripts/: validate-add-mcp.sh
(+12 files in other folders)
